--- a/playground/index.html
+++ b/playground/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Playground</title>
+  <title>Tiny Utils Playground</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      line-height: 1.6;
+    }
+    .function-demo {
+      margin: 20px 0;
+      padding: 15px;
+      border: 1px solid #eee;
+      border-radius: 4px;
+    }
+    .function-name {
+      font-weight: bold;
+      font-size: 1.2em;
+      margin-bottom: 10px;
+      color: #333;
+    }
+    .result {
+      background: #f5f5f5;
+      padding: 8px;
+      border-radius: 3px;
+      font-family: monospace;
+      margin: 5px 0;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 10px 0;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
+  <h1>Tiny Utils Playground</h1>
+  
+  <div class="function-demo">
+    <div class="function-name">Slug</div>
+    <div id="slug-result" class="result"></div>
+  </div>
+  
+  <div class="function-demo">
+    <div class="function-name">Color Alpha</div>
+    <div id="color-result" class="result"></div>
+    <div id="color-box" style="width: 100px; height: 100px;"></div>
+  </div>
+  
+  <div class="function-demo">
+    <div class="function-name">Date Formatting</div>
+    <div id="date-result" class="result"></div>
+  </div>
+  
+  <div class="function-demo">
+    <div class="function-name">Placeholder Images</div>
+    <div id="image-url" class="result"></div>
+    <img id="placeholder-image" alt="Placeholder">
+    
+    <div id="grayscale-url" class="result"></div>
+    <img id="grayscale-image" alt="Grayscale Placeholder">
+  </div>
+  
+  <div class="function-demo">
+    <div class="function-name">LocalStorage Utilities</div>
+    <div id="ls-set" class="result"></div>
+    <div id="ls-get" class="result"></div>
+    <div id="ls-default" class="result"></div>
+  </div>
+
   <script type="module" src="./main.ts"></script>
 </body>
 </html>
