feat: 在 README.md 和 playground 中添加数组洗牌功能示例

--- a/playground/index.html
+++ b/playground/index.html
@@ -73,6 +73,11 @@
     <div id="ls-get" class="result"></div>
     <div id="ls-default" class="result"></div>
   </div>
+  
+  <div class="function-demo">
+    <div class="function-name">Array Shuffling</div>
+    <div id="shuffle-result" class="result"></div>
+  </div>
 
   <script type="module" src="./main.ts"></script>
 </body>
